ctest: exclude all MemorySentinel Tests

--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -47,4 +47,4 @@ jobs:
       working-directory: deploy/build
       run: |
         cmake --build . --parallel 2
-        ctest -C ${{ matrix.build_type }} -L HyperBufferTest -j 2
+        ctest -C ${{ matrix.build_type }} -E Sentinel
