--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -35,4 +35,4 @@ jobs:
       working-directory: deploy/build
       run: |
         cmake --build . --parallel 2 --target HyperBufferTest
-        ctest -C ${{ matrix.build_type }} -L HyperBufferTest -j 2
+        ctest -C ${{ matrix.build_type }} -E Sentinel  
