--- a/.github/workflows/regenerate-single-include-header.yml
+++ b/.github/workflows/regenerate-single-include-header.yml
@@ -23,7 +23,7 @@ jobs:
         working-directory: deploy/build
         run: |
           cmake --build . --parallel 2 --target HyperBufferTest
-          ctest -C ${{ matrix.build_type }} -L HyperBufferTest -j 2
+          ctest -C ${{ matrix.build_type }} -E Sentinel  
       - name: Check single_include header
         run: |
           if [[ `git status --porcelain --untracked-files=no single_include/HyperBuffer.hpp` ]]; then
