try at least building memorysentinel tests before excluding them

--- a/.github/workflows/regenerate-single-include-header.yml
+++ b/.github/workflows/regenerate-single-include-header.yml
@@ -22,7 +22,7 @@ jobs:
           CTEST_OUTPUT_ON_FAILURE: 1
         working-directory: deploy/build
         run: |
-          cmake --build . --parallel 2 --target HyperBufferTest
+          cmake --build . --parallel 2
           ctest -C ${{ matrix.build_type }} -E Sentinel  
       - name: Check single_include header
         run: |
