--- a/.github/workflows/build-sonarqube.yml
+++ b/.github/workflows/build-sonarqube.yml
@@ -7,7 +7,7 @@ jobs:
     name: Linux, GCC, Release, Coverage & SonarQube
     runs-on: ubuntu-22.04
     env:
-      BUILD_WRAPPER_OUT_DIR: ' deploy/build/bw-output' # Directory where build-wrapper output will be placed
+      BUILD_WRAPPER_OUT_DIR: 'deploy/build/bw-output' # Directory where build-wrapper output will be placed
       cxx: g++-11
       cc: gcc-11
     steps:
@@ -39,6 +39,7 @@ jobs:
         CTEST_OUTPUT_ON_FAILURE: 1
       working-directory: deploy/build
       run: |
+        mkdir -p bw-output
         build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }}  make -j 4
         ./HyperBufferTest
         cd ..
