--- a/.github/workflows/build-sonarqube.yml
+++ b/.github/workflows/build-sonarqube.yml
@@ -7,7 +7,7 @@ jobs:
     name: Linux, GCC, Release, Coverage & SonarQube
     runs-on: ubuntu-22.04
     env:
-      BUILD_WRAPPER_OUT_DIR: 'deploy/build/bw-output' # Directory where build-wrapper output will be placed
+      BUILD_WRAPPER_OUT_DIR: 'bw-output' # Directory where build-wrapper output will be placed
       cxx: g++-11
       cc: gcc-11
     steps:
@@ -54,4 +54,4 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       with:
         args: >
-          --define sonar.cfamily.compile-commands="${{ env.BUILD_WRAPPER_OUT_DIR }}/compile_commands.json"  
+          --define sonar.cfamily.compile-commands="${{ deploy/build/env.BUILD_WRAPPER_OUT_DIR }}/compile_commands.json"  
