--- a/.github/workflows/build-sonarqube.yml
+++ b/.github/workflows/build-sonarqube.yml
@@ -54,4 +54,4 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       with:
         args: >
-          --define sonar.cfamily.compile-commands="${{ deploy/build/env.BUILD_WRAPPER_OUT_DIR }}/compile_commands.json"  
+          --define sonar.cfamily.compile-commands="deploy/build/${{ env.BUILD_WRAPPER_OUT_DIR }}/compile_commands.json"  
