set to run monthly

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,5 +1,8 @@
 name: Build & Test HyperBuffer
 on:
+  schedule:
+    # Runs at 00:00 UTC on the first day of every month
+    - cron: "0 0 1 * *"
   push:
     branches:
       - main
